--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -2,7 +2,7 @@
 spring.application.name=users-service
 
 # Configuration Server
-spring.profiles.active=dev
+spring.profiles.active=default
 spring.cloud.config.uri=http://localhost:8888
 
 management.endpoints.web.exposure.include=*
