configured zipkin and sleuth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 # Application name
 spring.application.name=users-service
+
+# Sleuth and Zipkin
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.sender.type=rabbit
+
+
