--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,20 +1,7 @@
 # Application name
 spring.application.name=users-service
-server.port=8070
-#Disable discovery
-spring.cloud.discovery.enabled = false
 
-#Disable cloud config and config discovery
-spring.cloud.config.discovery.enabled = false
-spring.cloud.config.enabled = false
+# Sleuth and Zipkin
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.sender.type=rabbit
 
-# Database loggin level
-logging.level.org.hibernate.SQL=debug
-
-#DB
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
