Updated travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 sudo: required
+language: java
+jdk:
+ - openjdk12
 services:
     - docker
 
+before_install:
+    - mvn install:install-file -Dfile=src/main/resources/lib/users-commons-0.0.1-SNAPSHOT.jar -DgroupId=com.jdiaz.users.commons -DartifactId=users-commons -Dversion=0.0.1-SNAPSHOT -Dpackaging=jar
+    - mvn clean install
+
 script:
-    - docker build -t jdiaz/users-service  .
+    - docker build -t jdiaz/users-service .
