--- a/src/test/resources/bootstrap.properties
+++ b/src/test/resources/bootstrap.properties
@@ -3,6 +3,6 @@ spring.application.name=users-service
 
 # Configuration Server
 spring.profiles.active=test
-spring.cloud.config.uri=http://localhost:8888
+spring.cloud.config.uri=http://config-server:8888
 
 management.endpoints.web.exposure.include=*
